Cache + Performance evaluation + query updated

--- a/config/config.ini
+++ b/config/config.ini
@@ -10,6 +10,9 @@ static_dir = web/static
 template_dir = web/templates
 generated_results_dir = generated_results
 
+# Default data config: DEV or ANALYST
+default_data_config = ANALYST
+
 [DEV]
 data_path = data/DEV
 indexer_state_dir = indexer_state/dev
